--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,7 +12,12 @@ h1{
     width: 100%;
     padding-top:  5em;
 }
-
+form input[type="text"], form input[type="password"], form input[type="number"]{
+    width: 100%;
+    padding: 0.5em 0.3em;
+    margin-bottom: 0.5em;
+    font-size: 1.2em;
+}
 form button{
     padding: 0.5em 1em;
     background-color: black;
