--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,22 +3,22 @@
 
 <div class="card-container">
   <div class="card-form">
-    <form>
+    <form #form="ngForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="">First Name</label>
-        <input type="text" name="firstName">
+        <input type="text" name="firstName" [(ngModel)]="emp.firstName">
       </div>
       <div class="form-group">
         <label for="">Last Name</label>
-        <input type="text" name="lastName">
+        <input type="text" name="lastName" [(ngModel)]="emp.lastName">
       </div>
       <div class="form-group">
         <label for="">Phone Number</label>
-        <input type="text" name="phNum">
+        <input type="text" name="phNum" [(ngModel)]="emp.phoneNumber">
       </div>
       <div class="form-group">
         <label for="">Department</label>
-        <input type="text" name="department">
+        <input type="text" name="department" [(ngModel)]="emp.department">
       </div>
       <div class="form-group">
       <button>Save</button>
@@ -27,10 +27,10 @@
   </div>
   
 <div class="card-grid">
-  <div class="card-row">
+  <div class="card-row"  *ngFor="let emp of employees">
     <div class="card-row-details">
-      <span>Akansha</span>
-      <span>CS</span>
+      <span>{{ emp.firstName }}</span>
+      <span>{{ emp.department }}</span>
     </div>
     <div class="card-row-action">
       <a><i class="fa-solid fa-trash-can"></i></a>
