--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,12 +28,12 @@
   
 <div class="card-grid">
   <div class="card-row"  *ngFor="let emp of employees">
-    <div class="card-row-details">
+    <div class="card-row-details" (click)="populateForm(emp)">
       <span>{{ emp.firstName }}</span>
       <span>{{ emp.department }}</span>
     </div>
     <div class="card-row-action">
-      <a><i class="fa-solid fa-trash-can"></i></a>
+      <a (click)="deleteEmployee(emp.id)"><i class="fa-solid fa-trash-can"></i></a>
 
     </div>
   </div>
